fix: overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 @import "tailwindcss";
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
+body {
+  overflow-x: hidden;
+}
+
 .roboto {
   font-family: "Roboto", sans-serif;
 }
